// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches chartTitle snapshot 1`] = `
<div
  className="chartTitle"
  data-testid="chartTitle"
>
  Last Open & Close Prices
</div>
`;

exports[`matches snapshot 1`] = `
<div
  className="chartTitle"
>
  Last Open & Close Prices
</div>
`;

exports[`matches snapshot1 1`] = `
<div
  className="chartTitle"
  data-testid="chartTitle"
>
  Last Open & Close Prices
</div>
`;
